--- a/pages/user/myRefer/myRefer.wxml
+++ b/pages/user/myRefer/myRefer.wxml
@@ -1,7 +1,3 @@
 <!--pages/user/myRefer/myRefer.wxml-->
-<!-- <referItem />
-<referItem />
-<referItem />
-<referItem />
-<referItem /> -->
-<none />
+<referItem wx:for='{{referList}}' referItem='{{item}}' wx:key='{{item.id}}' />
+<none wx:if='{{referList.length == 0}}' />
