--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -24,7 +24,7 @@
     </view>
     <view class='optionItem' bindtap='showOrder'>
       <view class='optionTitle'>规格</view>
-      <view class='optionValue'>{{orderInfo.specInfo.title ? orderInfo.specInfo.title:"请选择"}}</view>
+      <view class='optionValue'>{{(orderInfo.specInfo.marketprice) ? (orderInfo.specInfo.title||'默认'):"请选择"}}</view>
       <view class='icon'>
         <image src='/res/icon/icon_right_click.png'></image>
       </view>
@@ -40,8 +40,8 @@
 
   <view class='contentBox'>
     <!-- video Start -->
-    <video wx:if='{{goodInfo.video && videoFlag}}' binderror='onVideoErr' class='video' src='{{goodInfo.video}}'>
-      <cover-image wx:if='{{!playFlag}}' bindtap='play' src='{{goodInfo.thumb}}' mode='aspectFit'></cover-image>
+    <video poster='{{goodInfo.thumb}}' wx:if='{{goodInfo.video && videoFlag}}' binderror='onVideoErr' class='video' src='{{goodInfo.video}}'>
+      <!-- <cover-image wx:if='{{!playFlag}}' bindtap='play' src='{{goodInfo.thumb}}' mode='aspectFit'></cover-image> -->
     </video>
     <!-- video End -->
     <view class='contentTitle'>商品详情</view>
