--- a/pages/user/myRefer/components/referItem/referItem.wxml
+++ b/pages/user/myRefer/components/referItem/referItem.wxml
@@ -1,13 +1,14 @@
 <!--pages/user/myRefer/components/referItem/referItem.wxml-->
 <view class='itemBox'>
   <view class='itemLeft'>
-    <image class='userImg' src=''></image>
+    <image class='userImg' src='{{referItem.avatar}}'></image>
     <view class='userInfoBox'>
-      <view class='nameBox'>[会员]小刚</view>
-      <view class='info'>消费金额：0</view>
+      <view class='nameBox'>{{referItem.nickname}}</view>
+      <view class='info'>消费金额：{{referItem.money}}</view>
     </view>
   </view>
   <view class='itemRight'>
-    2019.3.27 12
+    <view>{{referItem.create_time}}</view>
+    <view>{{referItem.order_count}}次消费</view>
   </view>
 </view>
