--- a/pages/home/homeShow/homeShow.wxss
+++ b/pages/home/homeShow/homeShow.wxss
@@ -8,6 +8,8 @@ swiper {
 
 .swipterItem {
   background: #f5f5f5;
+  overflow: hidden;
+  border-radius: 10rpx;
 }
 
 .title {
@@ -56,18 +58,22 @@ page {
 .itemBox {
   margin: 10rpx;
   background: #f5f5f5;
-  height: 200rpx;
   border-radius: 10rpx;
   width: calc(50% - 20rpx);
   overflow: hidden;
 }
 
-.img {
+/* .img {
   overflow: hidden;
   height: 100%;
   width: 100%;
-}
+} */
 
 .itemLess {
-  height: 464rpx;
+  /* height: 464rpx; */
+}
+
+.itemMore {
+  height: 200rpx!important;
+  overflow: hidden;
 }
