--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -15,7 +15,7 @@
   </navigator>
 </view>
 
-<view class='chongZhiBox'>
+<view class='chongZhiBox' wx:if='{{userInfo.card&&userInfo.card.length>0}}'>
   <view class='chognzhiTitle'>选择充值方式</view>
   <view class='cardList'>
     <theme-view type="themeOnlyBorder" class='itemCard' wx:for="{{userInfo.card}}" wx:key="index">
@@ -53,7 +53,9 @@
 <info-item bindtap='callPhone' info="{{kefuInfo}}"></info-item>
 <!--</button>-->
 
-<navigator hover-class="none" wx:if='{{userInfo.type == "0"}}' class='joinBtn' url='/pages/join/message/message' open-type='navigate'><theme-view type="themeFont">加入合伙人</theme-view></navigator>
+<navigator hover-class="none" wx:if='{{userInfo.type == "0"}}' class='joinBtn' url='/pages/join/message/message' open-type='navigate'>
+  <theme-view type="themeFont">加入合伙人</theme-view>
+</navigator>
 
 
 <nav-bottom selected-index='3'></nav-bottom>
