--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -1,4 +1,5 @@
 /* pages/login/login.wxss */
+
 /* 
 .img {
   width: 356rpx;
@@ -25,30 +26,40 @@ image {
 page{
   background: #fff;
 } */
-.bgImg{
+
+.bgImg {
   width: 100%;
 }
 
-.bgImgs{
+.bgImgs {
   margin-top: -500rpx;
 }
-page{
+
+page {
   background: #fff;
 }
+
 /* pages/accredit/accredit.wxss */
-.logo{
-  margin-top:102rpx;
+
+.logo {
+  margin-top: 102rpx;
   width: 275rpx;
   display: block;
   /* margin: 102rpx auto 180rpx auto; */
 }
-.accreditBtn{
+
+.accreditBtn {
   color: #fff;
-  border-radius:41rpx;
-  padding:7rpx 0rpx;
+  border-radius: 41rpx;
+  padding: 7rpx 0rpx;
   /* height: 68rpx;
   line-height: 68rpx; */
   width: 88%;
-  margin:0rpx auto;
+  margin: 0rpx auto;
   font-size: 26rpx;
+}
+
+.cancel {
+  margin-top: 20rpx;
+  background: #999;
 }
