--- a/pages/user/user.wxss
+++ b/pages/user/user.wxss
@@ -1,6 +1,6 @@
 /* pages/user/user.wxss */
 
-.userBox{
+.userBox {
   height: 350rpx;
   width: 100%;
   display: flex;
@@ -8,171 +8,193 @@
   justify-content: center;
   align-items: center;
 }
-.infoList{
+
+.infoList {
   margin-top: 20rpx;
 }
-.bgImg{
+
+.bgImg {
   position: absolute;
   top: 0;
   width: 100%;
   height: 350rpx;
   z-index: -1;
 }
-.imgBox image{
-  width:140rpx;
-  height:139rpx;
-  background:rgba(245,245,245,1);
-  border-radius:50%;
-}
-.userName{
-  font-size:26rpx;
-  font-family:HiraginoSansGB-W3;
-  font-weight:normal;
-  color:rgba(255,255,255,1);
-}
-.money{
-  padding:0rpx 8rpx;
-  border-radius:100rpx;
-  display: flex;
-  flex-direction: row;
-  line-height: 43rpx;
-  margin-top:8rpx;
+
+.imgBox image {
+  width: 140rpx;
+  height: 139rpx;
+  background: rgba(245, 245, 245, 1);
+  border-radius: 50%;
 }
 
-.money .title{
-  font-size:22rpx;
-  font-family:HiraginoSansGB-W3;
-  font-weight:normal;
-  color:rgba(255,255,255,1);
+.userName {
+  font-size: 26rpx;
+  font-family: HiraginoSansGB-W3;
+  font-weight: normal;
+  color: rgba(255, 255, 255, 1);
+}
+
+.login {
+  color: #fff;
+  padding: 0 10rpx;
+}
+
+.money {
+  padding: 0rpx 8rpx;
+  border-radius: 100rpx;
+  line-height: 43rpx;
+  margin-top: 8rpx;
+}
+
+.money>view {
+  display: flex;
+  flex-direction: row;
+}
+
+.money .title {
+  font-size: 22rpx;
+  font-family: HiraginoSansGB-W3;
+  font-weight: normal;
+  color: rgba(255, 255, 255, 1);
   margin-left: 10rpx;
   white-space: nowrap;
 }
-.money .value{
+
+.money .value {
   margin-left: 10rpx;
-  font-size:24rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(255,192,17,1);
+  font-size: 24rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(255, 192, 17, 1);
 }
-.money .icon{
+
+.money .icon {
   flex-grow: 1;
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
 }
-.money .icon image{
+
+.money .icon image {
   width: 32rpx;
   height: 32rpx;
 }
 
-.chongZhiBox{
+.chongZhiBox {
   background: #fff;
   padding: 42rpx 0 42rpx 0;
-
 }
-.chognzhiTitle{
+
+.chognzhiTitle {
   padding-left: 27rpx;
-  font-size:30rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(51,51,51,1);
+  font-size: 30rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(51, 51, 51, 1);
 }
 
-.itemCard{
-  width:219rpx;
-  height:148rpx;
-  border-radius:6rpx;
+.itemCard {
+  width: 219rpx;
+  height: 148rpx;
+  border-radius: 6rpx;
   position: relative;
 }
-.itemCard .cardTitle{
+
+.itemCard .cardTitle {
   position: absolute;
-  border-radius:18rpx;
-  font-size:18rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(255,255,255,1);
+  border-radius: 18rpx;
+  font-size: 18rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 1);
   line-height: 36rpx;
   text-align: center;
   top: -13rpx;
   left: -10rpx;
 }
-.cardTitle theme-view view{
-  padding:0 10rpx;
+
+.cardTitle theme-view view {
+  padding: 0 10rpx;
 }
 
-
-.itemCard .cardContent{
-  margin-top:30rpx;
+.itemCard .cardContent {
+  margin-top: 30rpx;
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
-.itemCard .cardContent .cardPrice{
+
+.itemCard .cardContent .cardPrice {
   display: flex;
   flex-direction: row;
   align-items: baseline;
 }
-.cardPrice0{
-font-size:22rpx;
-font-family:PingFang-SC-Regular;
-font-weight:400;
-color:rgba(51,51,51,1);
-}
-.cardPrice1{
-font-size:52rpx;
-font-family:HelveticaInserat-Roman-SemiB;
-font-weight:400;
-color:rgba(51,51,51,1);
+
+.cardPrice0 {
+  font-size: 22rpx;
+  font-family: PingFang-SC-Regular;
+  font-weight: 400;
+  color: rgba(51, 51, 51, 1);
 }
 
-.cardImg{
+.cardPrice1 {
+  font-size: 52rpx;
+  font-family: HelveticaInserat-Roman-SemiB;
+  font-weight: 400;
+  color: rgba(51, 51, 51, 1);
+}
+
+.cardImg {
   position: absolute;
   top: 0;
   width: 102rpx;
   height: 32rpx;
-
 }
-.cardInfoBox{
+
+.cardInfoBox {
   position: relative;
   width: 102rpx;
   height: 32rpx;
   margin-bottom: 15rpx;
 }
-.cardImg image{
+
+.cardImg image {
   width: 102rpx;
   height: 32rpx;
 }
-.cardInfo{
+
+.cardInfo {
   width: 102rpx;
   height: 32rpx;
   text-align: center;
-  line-height:32rpx;
-  font-size:20rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:bold;
-  color:rgba(255,192,17,1);
+  line-height: 32rpx;
+  font-size: 20rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: bold;
+  color: rgba(255, 192, 17, 1);
   position: absolute;
   top: 0;
 }
-.cardList{
+
+.cardList {
   margin-top: 42rpx;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
 
-.joinBtn{
-  font-size:32rpx;
-  font-family:PingFang-SC-Heavy;
-  font-weight:800;
-  line-height:36rpx;
-  text-shadow:0rpx 0rpx 10rpx rgba(0, 0, 0, 0.1);
+.joinBtn {
+  font-size: 32rpx;
+  font-family: PingFang-SC-Heavy;
+  font-weight: 800;
+  line-height: 36rpx;
+  text-shadow: 0rpx 0rpx 10rpx rgba(0, 0, 0, 0.1);
   text-align: center;
   margin: 100rpx 0rpx 200rpx 0rpx;
 }
 
-.kefuBtn{
+.kefuBtn {
   padding: 0;
   border-radius: 0;
   border: 0rpx;
